:ambulance: 添加测试类|修复工具类代码