@@ -15,16 +15,18 @@
  */
 package com.mobaijun.common.collection;
 
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.Set;
 import java.util.function.BiFunction;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 /**
  * software：IntelliJ IDEA 2022.2.3<br>
@@ -36,34 +38,30 @@ import java.util.stream.Stream;
 public class ListUtil {
 
     /**
-     * map 数组添加到 list
+     * 将 Map 数组添加到现有 List 集合中。
      *
-     * @param list list集合
-     * @param maps map集合
-     * @param <K>  键
-     * @param <V>  值
-     * @return list 集合
+     * @param list 现有的 List 集合
+     * @param maps 要添加的 Map 数组
+     * @param <K>  键的类型
+     * @param <V>  值的类型
      */
     @SafeVarargs
-    public static <K, V> List<Map<K, V>> addMapsToList(List<Map<K, V>> list, Map<K, V>... maps) {
-        return Stream.of(maps)
+    public static <K, V> void addAllMapsToList(List<Map<K, V>> list, Map<K, V>... maps) {
+        list.addAll(Arrays.stream(maps)
                 .filter(Objects::nonNull)
-                .peek(list::add)
-                .collect(Collectors.toList());
+                .toList());
     }
 
+
     /**
-     * 执行全外连接操作，将两个排序列表（left 和 right）的结果合并，包括两个列表中未匹配的元素。
+     * 执行全外连接操作，将两个排序列表的结果合并，包括两个列表中未匹配的元素。
      *
-     * @param left       第一个列表，必须是排序的。
-     * @param right      第二个列表，必须是排序的。left 和 right 的排序顺序必须基本兼容，并由比较器参数所尊重。
-     * @param comparator 一个函数，用于比较左列表（T）的项目和右列表（U）的项目。
-     *                   如果左项小于右项，则返回负整数；如果它们相等，则返回0；如果右项大于左项，则返回正整数。
-     * @param combiner   一个函数，接受 T 的实例和 U 的实例，并生成一个新的 R。
+     * @param left       第一个排序列表。
+     * @param right      第二个排序列表。left 和 right 的排序顺序必须基本兼容，并由比较器参数所尊重。
+     * @param comparator 用于比较左列表和右列表项目的比较器。
+     *                   返回负整数表示左项小于右项，返回0表示相等，返回正整数表示右项大于左项。
+     * @param combiner   用于组合 T 的实例和 U 的实例，并生成一个新的 R 的组合器。
      *                   在全外连接中，T 或 U 可能为 null，因此组合器需要能够创建一个带有一个参数为 null 的 R。
-     * @param <T>        左列表元素的类型
-     * @param <U>        右列表元素的类型
-     * @param <R>        结果列表元素的类型
      * @return 包含全外连接结果的 List<R>，按照原始列表的排序顺序排序。
      */
     public static <T, U, R> List<R> fullOuterJoin(
@@ -99,5 +97,65 @@ public class ListUtil {
         }
 
         return result;
+    }
+
+    /**
+     * 给定两个列表，返回仅存在于其中一个列表中的元素的列表，即对称差集。具体来说，返回两个列表的差集（list1 - list2）和（list2 - list1）的并集。
+     *
+     * @param <E>   泛型类型
+     * @param list1 第一个列表
+     * @param list2 另一个列表
+     * @return 包含两个列表差集的列表
+     * 如果 list1 为 null 或为空，则返回 list2；
+     * 如果 list2 为 null 或为空，则返回 list1；
+     * 如果两个列表都为空，则返回一个空列表。
+     */
+    public static <E> List<E> getListDiff(List<E> list1, List<E> list2) {
+        if (list1 == null || list1.isEmpty()) {
+            return list2 == null || list2.isEmpty() ? new ArrayList<>() : list2;
+        }
+
+        if (list2 == null || list2.isEmpty()) {
+            return list1 == null || list1.isEmpty() ? new ArrayList<>() : list1;
+        }
+
+        // 使用 Set 处理差集和交集
+        Set<E> diffSet = new HashSet<>(list1);
+        Set<E> setOfCommonElements = new HashSet<>(list2);
+
+        // 求并集
+        diffSet.addAll(list2);
+
+        // 求交集
+        setOfCommonElements.retainAll(list1);
+
+        // 求差集
+        diffSet.removeAll(setOfCommonElements);
+
+        // 转换为 ArrayList 并返回结果
+        return new ArrayList<>(diffSet);
+    }
+
+    /**
+     * 获取指定索引位置周围的子列表。
+     *
+     * @param <T>    列表元素的类型
+     * @param list   原始列表
+     * @param index  子列表的中心索引
+     * @param offset 索引的偏移量，表示从中心索引向左和向右延伸的元素数量
+     * @return 子列表，从索引 (index - offset) 到索引 (index + offset) 结束
+     * 如果列表为 null 或为空，则返回原始列表
+     */
+    public static <T> List<T> subList(List<T> list, int index, int offset) {
+        if (list == null || list.isEmpty()) {
+            return list;
+        }
+
+        // 计算子列表的起始和结束索引，确保在有效范围内
+        int start = Math.max(0, index - offset);
+        int end = Math.min(list.size(), index + offset + 1);
+
+        // 返回子列表
+        return list.subList(start, end);
     }
 }
